fix: Adjust iframe width for better responsiveness and enable horizontal scrolling for headings and paragraphs in CSS

--- a/css/prism.css
+++ b/css/prism.css
@@ -142,3 +142,13 @@
 .token.table {
   display: inline;
 }
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+  overflow-x: scroll;
+}
